--- a/Views/home/Index.cshtml
+++ b/Views/home/Index.cshtml
@@ -2,8 +2,9 @@
 <div class="jumbotron">
       <h1>Enter Some Car Info</h1>
       <form action="/car/list" method="post">
-        <label for="Description">Description<input type="text" name="description"></label>
+        <label for="Model">Model<input type="text" name="model"></label>
         <label for="Miles">Miles<input type="text" name="miles"></label>
+        <label for="Description">Description<input type="text" name="description"></label>
         <button type="submit" name="button">Submit</button>
       </form>
     </div>
